# homrs

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.js  Login.css  PrivateRoute.js  index.css  index.js
frontend/src/components/: Admin.js  Home.js  (+4 more)
migrations/2020-08-28-130237_create_users/: up.sql
migrations/2020-08-31-135054_create_sessions/: up.sql
migrations/2020-08-31-162451_create_session_token_index/: down.sql  up.sql
migrations/2020-09-09-005909_create-recipes-table/: down.sql  up.sql
migrations/2020-09-09-010851_create-recipe-steps-table/: down.sql  up.sql
migrations/2020-09-09-011431_create-recipe-ingredients-table/: down.sql  up.sql
migrations/2020-09-09-011619_create-recipe-step-ingredients-table/: down.sql  up.sql
migrations/2020-09-09-011908_create-weekly-menus-table/: down.sql  up.sql
migrations/2020-09-09-013916_add-unique-to-ingredients-name/: down.sql  up.sql
migrations/2020-09-09-015320_add-timestamps-to-weekly-menus/: down.sql  up.sql
migrations/2020-09-09-020954_rename-weekly-meals-days-to-breakfast/: down.sql  up.sql
migrations/2020-09-09-021816_add-meal-categories-to-weekly-meals/: down.sql  up.sql
migrations/2020-09-09-134341_rename-step-number-in-recipe-step-ingredients-to-step-id/: down.sql  up.sql
server/: Cargo.toml  Dockerfile  Rocket.toml
server/src/: cust_error.rs  db.rs  main.rs  schema.rs
server/src/models/: api_key.rs  ingredient.rs  ingredients.rs  mod.rs  recipe.rs  recipe_step.rs  recipe_step_ingredient.rs  response.rs  session.rs  user.rs  weekly_menu.rs
server/src/routes/: ingredients.rs  mod.rs  recipes.rs  sessions.rs  users.rs
src/: cust_error.rs  db.rs  lib.rs  main.rs
src/models/: user.rs
src/routes/: users.rs
(+4 files in other folders)
