[package]
name = "homrs"
version = "0.1.0"
authors = ["GimpFlamingo <rayjkochenderfer@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = {version = "0.4.5", features = ["diesel_postgres_pool"]}
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
chrono = {version = "0.4.15", features = ["serde"]}
serde = {version = "1.0.115", features = ["derive"]}
uuid = {version = "0.8.1", features = ["serde", "v4"]}
rust-argon2 = "0.8.2"
